# django-component-include-tags

./: .gitignore  LICENCE  Pipfile  README.md  manage.py  pyproject.toml  requirements.txt
core/: settings.py  urls.py
src/component_include_tags/: apps.py  tests.py
src/component_include_tags/templates/component_include_tags/: card_example.html
src/component_include_tags/templatetags/: components.py
