[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django_component_include_tags"
version = "0.0.2"
authors = [
  { name="Redmond Scales", email="redmond.j.scales@gmail.com" },
]
description = "Component template tags for Django"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/redmondscales/django-component-include-tags"
"Bug Tracker" = "https://github.com/redmondscales/django-component-include-tags/issues"

[tool.setuptools.packages]
find = {where=["src"]}


